--- a/DIP/reports/彩色图像的直方图均衡化.md
+++ b/DIP/reports/彩色图像的直方图均衡化.md
@@ -1,10 +1,27 @@
+|实验名称|彩色图像的直方图均衡化|
+|:---:|:---:|
+|实验时间|2019 年 5 月 22 日|
+|姓名|张高阳|
+|班级|电子信息科学与技术|
+|学号|16020021054|
+
+## 实验目的、内容
+本次实验对彩色图像做直方图均衡化，并对均衡化前后的两幅彩色图像做出比较。
+
+## 相关背景知识介绍
+对于彩色图像的直方图均衡化，如果直接在 `RGB` 空间内对三个通道分别进行直方图均衡化，的确可以得到细节更鲜明的图像，但是图像的颜色会出现极大的失真，所以这种做法是错误的。
+正确的做法是，先将原始的 `RGB` 空间中的图像转换到 `HSI` 空间中，然后原图像中的色彩信息全部存在 `H`、 `S` 两个通道中，通道 `I` 中是原图像的亮度信息。这时对通道 `I` 做单通道的直方图均衡化，然后将均衡化后的 `HSI` 图像转换回 `RGB` 空间，即可得到直方图均衡化后的彩色图像。
+
+## 代码
+
+```py
 #!/usr/bin/python
 #-*- coding: utf-8 -*-
 __author__ = "zgy";
 
 import cv2 as cv
 import sys
-import numpy as np
+import math
 
 def rgb2hsi(imIn):
     try:
@@ -14,7 +31,7 @@ def rgb2hsi(imIn):
         G = G / 255.0;
         R = R / 255.0;
         eps = 1e-8;
-        pi = np.acos(-1.0);
+        pi = math.acos(-1.0);
         rows, cols = imIn.shape[0], imIn.shape[1];
         for i in range(rows):
             for j in range(cols):
@@ -32,7 +49,7 @@ def rgb2hsi(imIn):
                     if(r == g and g == b):
                         H = 0;
                     else:
-                        theta = np.acos((0.5 * ((r-g) + (r-b))) / np.sqrt(((r-g) ** 2 + (r-b) * (g-b))));
+                        theta = math.acos((0.5 * ((r-g) + (r-b))) / math.sqrt(((r-g) ** 2 + (r-b) * (g-b))));
                         if(b <= g):
                             H = theta;
                         else:
@@ -60,7 +77,7 @@ def hsi2rgb(imIn):
         S = S / 255.0;
         I = I / 255.0;
         eps = 1e-8;
-        pi = np.acos(-1.0);
+        pi = math.acos(-1.0);
         for i in range(rows):
             for j in range(cols):
                 B = 0;
@@ -74,19 +91,19 @@ def hsi2rgb(imIn):
                     H[i, j] *= 360;
                     if(0 <= H[i, j] and H[i, j] <= 120):
                         H[i, j] = H[i, j] / 180 * pi;
-                        R = I[i, j] * (1 + (S[i, j] * np.cos(H[i, j])) / (np.cos(pi/3 - H[i, j])));
+                        R = I[i, j] * (1 + (S[i, j] * math.cos(H[i, j])) / (math.cos(pi/3 - H[i, j])));
                         B = I[i, j] * (1 - S[i, j]);
                         G = 3 * I[i, j] - (R + B);
                     elif(120 < H[i, j] and H[i, j] <= 240):
                         H[i, j] -= 120;
                         H[i, j] = H[i, j] / 180 * pi;
-                        G = I[i, j] * (1 + (S[i, j] * np.cos(H[i, j])) / (np.cos(pi/3 - H[i, j])));
+                        G = I[i, j] * (1 + (S[i, j] * math.cos(H[i, j])) / (math.cos(pi/3 - H[i, j])));
                         R = I[i, j] * (1 - S[i, j]);
                         B = 3 * I[i, j] - (R + G);
                     elif(240 < H[i, j] and H[i, j] <= 360):
                         H[i, j] -= 240;
                         H[i, j] = H[i, j] / 180 * pi;
-                        B = I[i, j] * (1 + (S[i, j] * np.cos(H[i, j])) / (np.cos(pi/3 - H[i, j])));
+                        B = I[i, j] * (1 + (S[i, j] * math.cos(H[i, j])) / (math.cos(pi/3 - H[i, j])));
                         G = I[i, j] * (1 - S[i, j]);
                         R = 3 * I[i, j] - (G + B);
                     else:
@@ -152,3 +169,28 @@ def main():
 
 if(__name__ == "__main__"):
     main();
+```
+
+## 运行结果
+|原始图像|均衡化|
+|:---:|:---:|
+| ![Original][lena_orig] | ![Processed][lena_proc] |
+| ![Original][zth_orig] | ![Processed][zth_proc] |
+| ![Original][life_orig] | ![Processed][life_proc] |
+
+## 结果分析
+经过直方图均衡化操作后，图像的细节可以被放大，使图像观看起来更鲜明（图`1`）；但对于一些色彩信息较为简单的图像，均衡化结果可能并不如原图观看效果更好（图`2`）；一些照片均衡化后的结果会看起来像画作（图`3`）。
+
+## 出现的问题、解决方法及体会
+一开始做出的均衡化后的图像的颜色出现了严重失真。研究后发现在实现 `RGB` 与 `HSI` 通道的相互转换的函数中有的计算结果会出现越界(`>255`)。将最大值限制到 `255` 后，解决了这一问题。
+
+
+[lena_orig]:http://106.14.194.215/imghost/histogram/rgb/lena_orig.tiff	"1. Lena Original"
+[lena_proc]:http://106.14.194.215/imghost/histogram/rgb/lena_proc.jpg	"1. Lena Processed"
+
+
+[zth_orig]:http://106.14.194.215/imghost/histogram/rgb/zth_orig.jpg	"2. Original"
+[zth_proc]:http://106.14.194.215/imghost/histogram/rgb/zth_proc.jpg "2. Processed"
+
+[life_orig]:http://106.14.194.215/imghost/histogram/rgb/life_orig.jpg	"3. Orignal"
+[life_proc]:http://106.14.194.215/imghost/histogram/rgb/life_proc.jpg	"3. Processed"
